Added realtime clock

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./style.css" rel="stylesheet" />
     <title>AK's GH</title>
   </head>
-  <body>
+  <body onload="startClock()">
     <div class="main">
       <div class="topbar">
         <span class="activities">Activities</span>
